Styled existing chats

--- a/synapsis/src/main/resources/templates/pages/messagingPage.html
+++ b/synapsis/src/main/resources/templates/pages/messagingPage.html
@@ -81,46 +81,60 @@
 
 
             <ul id="messageArea">
-                <li th:each="message : ${messages}" class="flex items-center">
-                    <div class="flex flex-col items-start">
+                <li th:each="message : ${messages}" class="flex">
+                    <div class="flex flex-col w-full">
                         <th:block th:if="${message.fileName != null and message.file != null}">
                             <img th:if="${message.fileName.toLowerCase().matches('.*\.(png|jpe?g|gif|bmp)')}" th:src="${message.file}" th:alt="${message.fileName}" />
                             <a th:unless="${message.fileName.toLowerCase().matches('.*\.(png|jpe?g|gif|bmp)')}" th:href="@{/downloadFile/{messageId}(messageId=${message.id})}" th:download="${message.fileName}" th:text="'Download ' + ${message.fileName}"></a>
                         </th:block>
-                        <div th:if="${message.getSender().name == globalUserName}" class="bg-blue-200">
-                            <p th:text="${message.getSender().name}" class="text-sm"></p>
-                            <p th:text="${message.getContent()}"></p>
-                        </div>
-                        <div th:if="${message.getSender().name != globalUserName}" class="bg-red-200">
-                            <p th:text="${message.getSender().name}" class="text-sm"></p>
-                            <p th:text="${message.getContent()}"></p>
-                        </div>
-                        <form th:if="${message.getSender().getId() != authenticatedUserID}" th:action="@{/chat/report}" method="POST">
-                            <input type="hidden" name="messageID" th:value="${message.getId()}" />
-                            <input type="hidden" name="chatID" th:value="${chatId}" />
-                            <button data-modal-target="popup-modal" data-modal-toggle="popup-modal" class="absolute top-0 right-0 btn bg-primary btn-primary font-sans  w-28 h-8 p-0 " type="button" >Report</button>
-                            <div id="popup-modal" tabindex="-1" class="fixed top-0 left-0 right-0 z-50 hidden p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] md:h-full">
-                                <div class="relative w-full h-full max-w-md md:h-auto">
-                                    <div class="relative bg-white rounded-lg">
-                                        <button type="button" class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center" data-modal-hide="popup-modal">
-                                            <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-                                            <span class="sr-only">Close modal</span>
-                                        </button>
-                                        <div class="p-6 text-center">
-                                            <svg aria-hidden="true" class="mx-auto mb-4 text-gray-400 w-14 h-14 " fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
-                                            <p class="mb-5 text-lg font-normal text-gray-500 ">Please note that if you choose to report a message for harassment, up to 5 previous messages from the same conversation will
-                                                be reviewed by our administrative team in order to assess the situation fully. This is to ensure that appropriate action is taken and that any patterns of behavior are identified.
-                                                We take harassment very seriously and aim to create a safe and respectful environment for all of our users.
-                                                By reporting a message, you are helping us to achieve this goal.</p>
-                                            <button data-modal-hide="popup-modal" type="submit" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300  font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center mr-2">
-                                                I accept
-                                            </button>
-                                            <button data-modal-hide="popup-modal" type="button" class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-200 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10">I decline</button>
-                                        </div>
+                        <!--Messages sent by user-->
+                        <div th:if="${message.getSender().name == globalUserName}"
+                             class="p-2 px-2 m-2 ml-96 bg-neutral-100 rounded-lg text-right w-1/2 flex flex-row-reverse">
+                            <i class="fa-solid fa-ellipsis-vertical fa-sm p-3 px-4" style="color: #c0c0c0;"
+                               data-popover-target="popover-click" data-popover-trigger="click" type="button"></i>
+                                <div data-popover id="popover-click" role="tooltip"
+                                     class="absolute z-10 invisible inline-block w-18 text-sm text-black-variant transition-opacity
+                                     duration-300 bg-primary-variant border border-light rounded-lg opacity-0">
+                                    <div class="px-3 py-2 bg-primary-variant border-light rounded-t-lg">
+                                        <h3 class="font-semibold text-black-variant">Report</h3>
                                     </div>
+                                    <div data-popper-arrow></div>
                                 </div>
-                            </div>
-                        </form>
+                            <p th:text="${message.getContent()}"></p>
+                        </div>
+
+                        <!--Messages received by user-->
+                        <div th:if="${message.getSender().name != globalUserName}"
+                             class="p-2 px-2 m-2 bg-neutral-100 rounded-lg w-1/2 flex flex-row">
+                            <i class="fa-solid fa-ellipsis-vertical fa-sm p-3 px-4" style="color: #c0c0c0;"></i>
+                            <p th:text="${message.getContent()}"></p>
+                        </div>
+<!--                        <form th:if="${message.getSender().getId() != authenticatedUserID}" th:action="@{/chat/report}" method="POST">-->
+<!--                            <input type="hidden" name="messageID" th:value="${message.getId()}" />-->
+<!--                            <input type="hidden" name="chatID" th:value="${chatId}" />-->
+<!--                            <button data-modal-target="popup-modal" data-modal-toggle="popup-modal" class="absolute top-0 right-0 btn bg-primary btn-primary font-sans  w-28 h-8 p-0 " type="button" >Report</button>-->
+<!--                            <div id="popup-modal" tabindex="-1" class="fixed top-0 left-0 right-0 z-50 hidden p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] md:h-full">-->
+<!--                                <div class="relative w-full h-full max-w-md md:h-auto">-->
+<!--                                    <div class="relative bg-white rounded-lg">-->
+<!--                                        <button type="button" class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center" data-modal-hide="popup-modal">-->
+<!--                                            <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>-->
+<!--                                            <span class="sr-only">Close modal</span>-->
+<!--                                        </button>-->
+<!--                                        <div class="p-6 text-center">-->
+<!--                                            <svg aria-hidden="true" class="mx-auto mb-4 text-gray-400 w-14 h-14 " fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>-->
+<!--                                            <p class="mb-5 text-lg font-normal text-gray-500 ">Please note that if you choose to report a message for harassment, up to 5 previous messages from the same conversation will-->
+<!--                                                be reviewed by our administrative team in order to assess the situation fully. This is to ensure that appropriate action is taken and that any patterns of behavior are identified.-->
+<!--                                                We take harassment very seriously and aim to create a safe and respectful environment for all of our users.-->
+<!--                                                By reporting a message, you are helping us to achieve this goal.</p>-->
+<!--                                            <button data-modal-hide="popup-modal" type="submit" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300  font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center mr-2">-->
+<!--                                                I accept-->
+<!--                                            </button>-->
+<!--                                            <button data-modal-hide="popup-modal" type="button" class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-200 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10">I decline</button>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </form>-->
                     
                 </li>
 
@@ -129,14 +143,14 @@
                             </div>
                         </div>
 
-                        <div class= "absolute bottom-0 left-0 mt-10">
+                        <div class="relative ml-2 mt-10">
                             <form  id="messageForm" name="messageForm" nameForm="messageForm">
                                 <input id="chat" class="hidden" th:value="${chatId}"/>
                                 <input id="sender" class="hidden" th:value="${senderId}"/>
                                 <input id="receiver" class="hidden" th:value="${receiverId}"/>
 
-                                <input  type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control w-96 mt-10"/>
-                                <input type="file" id="file" name="file"/>
+                                <input type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control w-96 mt-10 rounded-lg"/>
+                                <input type="file" id="file" name="file" class="rounded-lg"/>
                                 <button type="submit" class="btn bg-primary btn-primary font-sans w-28 h-8 p-0 ml-14">Send</button>
 
                             </form>
