--- a/synapsis/src/main/resources/templates/pages/home.html
+++ b/synapsis/src/main/resources/templates/pages/home.html
@@ -46,8 +46,8 @@
             </div>
             <div class="langEN text-3xl lg:text-6xl text-primary font-medium font-serif">Connect with people.</div>
             <div class="langFR text-3xl lg:text-6xl text-primary font-medium font-serif">Connectez-vous avec les gens.</div>
-            <a href="/register" class="langEN text-xl lg:text-2xl w-1/3 btn btn-primary mt-8 ml-6 btn-primary">Find people you know</a>
-            <a href="/register"class="langFR text-xl lg:text-2xl w-1/3 btn btn-primary mt-8 ml-6 btn-primary">Trouvez des gens</a>
+            <a href="/register" class="langEN text-xl lg:text-2xl btn btn-primary mt-8 ml-6 btn-primary">Find people you know</a>
+            <a href="/register"class="langFR text-xl lg:text-2xl btn btn-primary mt-8 ml-6 btn-primary">Trouvez des gens</a>
         </div>
     </div>
 
