252 Pass AppUser and Profile objects to Thymeleaf, rather than individual attributes

--- a/synapsis/src/main/resources/templates/pages/companypage.html
+++ b/synapsis/src/main/resources/templates/pages/companypage.html
@@ -11,17 +11,17 @@
                 <!-- The profile of the company page is displayed with all details -->
                 <div class="p-5 ">
                     <h5 class="text-left text-2xl  font-bold tracking-tight text-gray-900 dark:text-white"
-                        th:text="${name}"></h5>
+                        th:text="${currentAppUser.name}"></h5>
                     <p th:text="${profilePicture}" id="base64Image" hidden></p>
 
                     <table>
                         <tr>
                             <th>
-                                <p class="font-normal text-gray-700  dark:text-gray-400" th:text="${website}"></p>
+                                <p class="font-normal text-gray-700  dark:text-gray-400" th:text="${companyProfile.website}"></p>
                             </th>
                             <th>
                                 <p class="ml-40  font-normal  text-gray-700 dark:text-gray-400"
-                                   th:text="${companySize}"></p>
+                                   th:text="${companyProfile.companySize}"></p>
                             </th>
                             <th>
                                 <p>+employees</p>
@@ -29,51 +29,51 @@
                         </tr>
                         <tr>
                             <td>
-                                <p class="font-normal  text-gray-700 dark:text-gray-400" th:text="${speciality}"></p>
+                                <p class="font-normal  text-gray-700 dark:text-gray-400" th:text="${companyProfile.speciality}"></p>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <p class="font-normal  text-gray-700 dark:text-gray-400" th:text="${location}"></p>
+                                <p class="font-normal  text-gray-700 dark:text-gray-400" th:text="${companyProfile.location}"></p>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <p th:if="${role.toString() == 'COMPANY' and verificationStatus == true}">&#10004;</p>
+                                <p th:if="${currentAppUser.role.toString() == 'COMPANY' and currentAppUser.verificationStatus == true}">&#10004;</p>
                             </td>
                         </tr>
                     </table>
                 </div>
 
                 <form th:if="${!isConnectedWith and !isPendingConnectionWhenSentConnection and !isPendingConnectionWhenReceivingConnection and !showControls}" th:action="@{/connect}" method="post">
-                    <input type="hidden" name="id" th:value="${id}"/>
+                    <input type="hidden" name="id" th:value="${currentAppUser.id}"/>
                     <button class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0" type="submit">Connect</button>
                 </form>
 
                 <button th:if="${isPendingConnectionWhenSentConnection}" class="btn bg-black btn-black font-sans text-sm w-25 h-9 p-0" disabled>Pending</button>
 
                 <form th:action="@{/connection/accept}" method="post">
-                    <input type="hidden" name="id" th:value="${id}" />
+                    <input type="hidden" name="id" th:value="${currentAppUser.id}" />
                     <button th:if="${isPendingConnectionWhenReceivingConnection}" class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0" type="submit">Accept</button>
                 </form>
 
                 <form th:if="${isConnectedWith}" th:action="@{/disconnect}" method="post">
-                    <input type="hidden" name="id" th:value="${id}"/>
+                    <input type="hidden" name="id" th:value="${currentAppUser.id}"/>
                     <button class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0" type="submit">Disconnect
                     </button>
                 </form>
                 <form th:action="@{/chat/create}" method="post">
-                    <input type="hidden" name="id" th:value="${id}" />
+                    <input type="hidden" name="id" th:value="${currentAppUser.id}" />
                     <button class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0" type="submit">Chat</button>
                 </form>
 
-                <form th:if="${role.toString() == 'COMPANY' and myRole.toString() == 'ADMIN' and verificationStatus == false}" th:action="@{/admin/verifyCompany}" method="post">
-                    <input type="hidden" name="companyUserId" th:value="${id}" />
+                <form th:if="${currentAppUser.role.toString() == 'COMPANY' and myRole.toString() == 'ADMIN' and currentAppUser.verificationStatus == false}" th:action="@{/admin/verifyCompany}" method="post">
+                    <input type="hidden" name="companyUserId" th:value="${currentAppUser.id}" />
                     <button class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0" type="submit">Mark</button>
                 </form>
 
-                <form th:if="${role.toString() == 'COMPANY' and myRole.toString() == 'ADMIN' and verificationStatus == true}" th:action="@{/admin/unverifyCompany}" method="post">
-                    <input type="hidden" name="companyUserId" th:value="${id}" />
+                <form th:if="${currentAppUser.role.toString() == 'COMPANY' and myRole.toString() == 'ADMIN' and currentAppUser.verificationStatus == true}" th:action="@{/admin/unverifyCompany}" method="post">
+                    <input type="hidden" name="companyUserId" th:value="${currentAppUser.id}" />
                     <button class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0" type="submit">Unmark</button>
                 </form>
             </div>
@@ -104,7 +104,7 @@
                 <tr>
                     <td>
                         <div class="max-h-96 overflow-y-auto">
-                            <p class="font-normal ml-3 py-3 px-4 mr-2 mb-2 resize-y text-gray-700" th:text="${description}"></p>
+                            <p class="font-normal ml-3 py-3 px-4 mr-2 mb-2 resize-y text-gray-700" th:text="${companyProfile.description}"></p>
                         </div>
                     </td>
                 </tr>
