--- a/synapsis/src/main/resources/templates/fragments/navbar.html
+++ b/synapsis/src/main/resources/templates/fragments/navbar.html
@@ -5,17 +5,17 @@
 <div th:fragment="navbar" class="h-32">
     <!--Not logged in navbar-->
     <nav sec:authorize="!isAuthenticated()" class="bg-white px-4 lg:px-2 py-6 fixed w-full z-20 top-0 left-0">
-        <div class="hidden lg:container lg:flex lg:flex-wrap lg:items-center lg:justify-between lg:mx-auto">
+        <div class="hidden lg:container lg:flex lg:items-center lg:justify-between lg:mx-auto">
             <a href="/" class="flex items-center">
                 <img src="/assets/synapsis_black.svg" class="h-12 lg:h-16 mt-3 mr-3 " alt="Synapsis Logo">
             </a>
-            <div class="flex md:order-2">
+            <div class="flex md:order-2 m-2">
                 <a href="/login" class="btn btn-primary text-xl">
                     Sign In
                 </a>
             </div>
             <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
-                <ul class="flex flex-col p-4 mt-4 md:flex-row md:space-x-24 md:mt-0 text-3xl font-light text-black">
+                <ul class="flex flex-col p-4 mt-4 md:flex-row md:space-x-16 md:mt-0 text-3xl font-light text-black">
                     <li>
                         <a href="#"
                            aria-current="page">Home</a>
@@ -318,12 +318,6 @@
 
 
 
-
-
-
-
-
-
     <!-- Logged in navbar for Candidate,Recruiter-->
     <nav  sec:authorize="hasAnyAuthority('RECRUITER', 'CANDIDATE')"
          class="bg-white px-4 lg:px-2 py-2 fixed w-full z-20 top-0 left-0">
@@ -332,7 +326,7 @@
                 <img src="/assets/synapsis_black.svg" class="h-12 lg:h-16 mt-3 mr-3 " alt="Synapsis Logo">
             </a>
             <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
-                <ul class="flex flex-col justify-between p-4 mt-4 md:flex-row md:space-x-6 md:mt-0 text-lg font-light text-black w-[1000px]">
+                <ul class="flex flex-col justify-between p-4 mt-4 md:flex-row md:space-x-14 md:mt-0 text-lg font-light text-black">
                     <a href="/user" aria-current="page">
                         <li class="flex flex-col items-center">
                             <i class="fa-solid fa-user fa-2x h-10"></i>
@@ -371,8 +365,6 @@
                                 </div>
                             </div>
                         </li>
-                    </a>
-                    <a href="/user">
                     </a>
                     <a href="/settings">
                         <li>
