#250 added network option back to navbar of admin so they can mark companies

--- a/synapsis/src/main/resources/templates/fragments/navbar.html
+++ b/synapsis/src/main/resources/templates/fragments/navbar.html
@@ -231,12 +231,18 @@
                 <img src="/assets/synapsis_black.svg" class="h-12 lg:h-16 mt-3 mr-3 " alt="Synapsis Logo">
             </a>
             <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
-                <ul class="flex flex-col justify-between p-4 mt-4 md:flex-row md:space-x-6 md:mt-0 text-lg font-light text-black w-[500px]">
+                <ul class="flex flex-col justify-between p-4 mt-4 md:flex-row md:space-x-6 md:mt-0 text-lg font-light text-black w-[600px]">
 
                     <a href="/admincreationpage">
                         <li class="flex flex-col items-center">
                             <i class="fa-solid fa-user fa-2x h-10"></i>
                             Create Admin
+                        </li>
+                    </a>
+                    <a href="/network">
+                        <li class="flex flex-col items-center">
+                            <i class="fa-solid fa-users fa-2x h-10"></i>
+                            Network
                         </li>
                     </a>
                     <a href="/chats">
@@ -280,6 +286,12 @@
                         <a href="/admincreationpage" class="block py-2 pl-3 pr-4 text-black-variant rounded hover:text-primary">
                             <i class="fa-solid fa-user mr-2"></i>
                             Create Admin
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/network" class="block py-2 pl-3 pr-4 text-black-variant rounded hover:text-primary">
+                            <i class="fa-solid fa-users"></i>
+                            Network
                         </a>
                     </li>
                     <li>
