Styling revisions to several pages
Now responsive: home page (authenticated), access denied, application success, settings

--- a/synapsis/src/main/resources/templates/pages/accessDenied.html
+++ b/synapsis/src/main/resources/templates/pages/accessDenied.html
@@ -29,8 +29,8 @@
 </head>
 <body>
     <div class="flex items-center justify-center h-screen">
-        <div class="flex flex-col items-center border border-black-variant p-6 bg-grey">
-            <h1 class="text-3xl font-bold">Access Denied</h1>
+        <div class="flex flex-col items-center border border-black-variant p-6 bg-light">
+            <h1 class="text-4xl font-extrabold">Access Denied</h1>
             <p>You are not authorized to view this page.</p>
             <a th:href="@{/}" class="underline">Return to homepage</a>
         </div>
