--- a/synapsis/src/main/resources/templates/pages/job.html
+++ b/synapsis/src/main/resources/templates/pages/job.html
@@ -76,7 +76,7 @@
         <button class="inline-block px-4 py-2 text-white bg-primary-variant rounded-full" disabled>Submitted</button>
       </div>
       <div th:unless="${isJobSubmitted}">
-        <a th:href="@{/jobapplication/{id}(id=${jobId})}" class="mb-4 bg-primgit ary text-white mx-auto p-4 rounded-2xl font-thin hover:bg-opacity-60">Apply Now at Synapsis</a>
+        <a th:href="@{/jobapplication/{id}(id=${jobId})}" class="mb-4 bg-primary text-white mx-auto p-4 rounded-2xl font-thin hover:bg-opacity-60">Apply Now at Synapsis</a>
       </div>
     </div>
 
