#261 added about us and services page

--- a/synapsis/src/main/resources/templates/fragments/navbar.html
+++ b/synapsis/src/main/resources/templates/fragments/navbar.html
@@ -21,11 +21,11 @@
                            aria-current="page">Home</a>
                     </li>
                     <li>
-                        <a href="#"
+                        <a href="/aboutUs"
                         >About</a>
                     </li>
                     <li>
-                        <a href="#"
+                        <a href="/ourServices"
                         >Services</a>
                     </li>
                     <li>
@@ -54,7 +54,7 @@
 
                     </li>
                     <li>
-                        <a href="#"  class="block py-2 pl-3 pr-4 text-black-variant rounded hover:text-primary">
+                        <a href="/aboutUs"  class="block py-2 pl-3 pr-4 text-black-variant rounded hover:text-primary">
                            About
                         </a>
 
